manifest.yaml
#Kubernetes Version
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alex-cit270
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alex-cit270
  template:
    metadata:
      labels:
        app: alex-cit270
    spec:
      containers:
        - name: alex-cit270
          image: alexd316/cit270
          command: ["npm"]
          args: ["run","start"]
          ports:
            - containerPort: 443
          resources:
            limits:
              cpu: ".125"
              memory: "500Mi"
            livenessProbe:
              httpGet:
                path: /
                port: 443
              initialDelaySeconds: 3
              periodSeconds: 3
            readinessProbe:
              httpGet:
                path: /
                port: 443
              initialDelaySeconds: 3
              periodSeconds: 3
