ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: alejandroduarte-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issue: "letsencrypt-cluster-issuer"
spec:
  tls:
  - hosts:
    - alexduarte.cit270.com
    secretName: alejandroduarte-tls
  rules:
  - host: alexduarte.cit270.com
    http:
      paths:
      - backend: 
          serviceName: alex-cit270-loadbalancer
          servicePort: 80
